# Graphics-Collection

./: .clang-format  CMakeLists.txt  LICENSE  README.md
DX12/: CMakeLists.txt
DX12/Common/: CMakeLists.txt  IApp.cpp  IApp.h
Rasterization/: CMakeLists.txt
Rasterization/include/: Common.h  Renderer.h
Rasterization/src/: Rasterization.cpp  Renderer.cpp  Triangles.cpp
include/: Common.h  Line.h  Renderer.h
src/: Line.cpp  Rasterization.cpp  Renderer.cpp  Triangles.cpp
